2000-02-07  Nick Clifton  <nickc@cygnus.com>

	* config/arm/lib1funcs.asm: Merge in thumb functions from
	lib1thumb.asm.
	
	* config/arm/lib1thumb.asm: Delete.

2000-02-04  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c: Sychronised with current Red hat local
	sources. 
	* config/arm/arm.h: Ditto.
	* config/arm/arm-protos.h: Ditto.

2000-02-02  Bernd Schmidt  <bernds@cygnus.co.uk>

	* arm.c (soft_df_operand): Reject SUBREGs containing a constant.

	* arm.c (arm_gen_movstrqi): Generate halfword stores rather than two
	byte stores.

2000-02-02  Nick Clifton  <nickc@cygnus.com>

	* config/arm/thumb.c (thumb_exit): Additional fix for same bug.

	* config/arm/arm.md (epilogue): Fix rtl checking abort because
	(return) was emited using an emit_insn() call. 
	
2000-01-31  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c (output_thumb_prologue): Fix bug generating
	thumb stack frame.
	(thumb_exit): Move frame pointer back into hard frame pointer
	register if backtracing is being used.

2000-01-13  Richard Earnshaw (rearnsha@arm.com)

	* Merge trunk code from tag merged-arm-thumb-backend-merge_20000113 
	into branch.

	1999-12-15  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/arm.md (neg_pool_offset): Provide default for new
	attribute.
	(arm_movsi_insn): Add neg_pool_offset attribute.
	* config/arm/arm.c (arm_find_barrier): Replace arg FIX with an
	rtx for the insn that starts the scan and an unsigned long for its
	address.  Add MIN_OFFSET and PINSERTED args.  All callers changed.
	Change scan to ignore insns before MIN_OFFSET.  Store size of inserted
	instructions in *PINSERTED.
	(struct minipool_fixup): Add MIN_ADDRESS elt.
	(sort_fixups): Compute it.
	(arm_reorg): Changes to support inserting pools before the insn to be
	fixed up.

	1999-12-08  Bernd Schmidt  <bernds@cygnus.co.uk>

	* config/arm/elf.h (MULTILIB_DEFAULTS): Add "marm".
	* config/arm/linux-elf.h (MULTILIB_DEFAULTS): Add "marm".
	* config/arm/coff.h (MULTILIB_DEFAULTS): Add "marm".
